Fixed horizontal scroll issue I think

--- a/style.css
+++ b/style.css
@@ -457,7 +457,7 @@ header {
   transform: rotate(15deg);
 }
 
-.footer {
+#footer {
   width: 100%;
   margin: 0 auto;
 
@@ -468,6 +468,10 @@ header {
   gap: 0.5rem;
 
   font-size: 0.8rem;
+}
+
+#footer > .section-background {
+  top: -3rem;
 }
 
 .social-links {
